source/0.12/docs/modules.md
title: Modules
---
## Official modules

### General
| Module name | Description | Version |
|-------------|-------------|---------|
| [moleculer-web](moleculer-web.html) | Official API Gateway service for Moleculer framework | [![npm](https://img.shields.io/npm/v/moleculer-web.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-web)
| [moleculer-fake](https://github.com/moleculerjs/moleculer-addons/tree/master/packages/moleculer-fake#readme) | Fake data generator by Fakerator. | [![NPM version](https://img.shields.io/npm/v/moleculer-fake.svg)](https://www.npmjs.com/package/moleculer-fake)
| [moleculer-mail](https://github.com/moleculerjs/moleculer-addons/tree/master/packages/moleculer-mail#readme) | Send emails from any services. | [![NPM version](https://img.shields.io/npm/v/moleculer-mail.svg)](https://www.npmjs.com/package/moleculer-mail)
| [moleculer-twilio](https://github.com/moleculerjs/moleculer-addons/tree/master/packages/moleculer-twilio#readme) | Send SMS Message with Twilio. | [![NPM version](https://img.shields.io/npm/v/moleculer-twilio.svg)](https://www.npmjs.com/package/moleculer-twilio)
| [moleculer-slack](https://github.com/moleculerjs/moleculer-addons/tree/master/packages/moleculer-slack#readme) | Send Messages to Slack. | [![NPM version](https://img.shields.io/npm/v/moleculer-slack.svg)](https://www.npmjs.com/package/moleculer-slack)

### Databases & stores
| Module name | Description | Version |
|-------------|-------------|---------|
| [moleculer-db](https://github.com/moleculerjs/moleculer-db/tree/master/packages/moleculer-db#readme) | Moleculer service to store entities in database. | [![NPM version](https://img.shields.io/npm/v/moleculer-db.svg)](https://www.npmjs.com/package/moleculer-db)
| [moleculer-db-adapter-mongo](https://github.com/moleculerjs/moleculer-db/tree/master/packages/moleculer-db-adapter-mongo#readme) | MongoDB native adapter for Moleculer DB service. | [![NPM version](https://img.shields.io/npm/v/moleculer-db-adapter-mongo.svg)](https://www.npmjs.com/package/moleculer-db-adapter-mongo)
| [moleculer-db-adapter-mongoose](https://github.com/moleculerjs/moleculer-db/tree/master/packages/moleculer-db-adapter-mongoose#readme) | Mongoose adapter for Moleculer DB service. | [![NPM version](https://img.shields.io/npm/v/moleculer-db-adapter-mongoose.svg)](https://www.npmjs.com/package/moleculer-db-adapter-mongoose)
| [moleculer-db-adapter-sequelize](https://github.com/moleculerjs/moleculer-db/tree/master/packages/moleculer-db-adapter-sequelize#readme) | SQL adapter (Postgres, MySQL, SQLite & MSSQL) for Moleculer DB service. | [![NPM version](https://img.shields.io/npm/v/moleculer-db-adapter-sequelize.svg)](https://www.npmjs.com/package/moleculer-db-adapter-sequelize)

### Tasks, queues & jobs
| Module name | Description | Version |
|-------------|-------------|---------|
| [moleculer-bee-queue](https://github.com/moleculerjs/moleculer-addons/tree/master/packages/moleculer-bee-queue#readme) | Task queue mixin for Bee-Queue. | [![NPM version](https://img.shields.io/npm/v/moleculer-bee-queue.svg)](https://www.npmjs.com/package/moleculer-bee-queue)
| [moleculer-bull](https://github.com/moleculerjs/moleculer-addons/tree/master/packages/moleculer-bull#readme) | Task queue service with Bull. | [![NPM version](https://img.shields.io/npm/v/moleculer-bull.svg)](https://www.npmjs.com/package/moleculer-bull)
| [moleculer-cron](https://github.com/davidroman0O/moleculer-cron#readme) | Cron tasks. | [![NPM version](https://img.shields.io/npm/v/moleculer-cron.svg)](https://www.npmjs.com/package/moleculer-cron)

### Tools
| Module name | Description | Version |
|-------------|-------------|---------|
| [moleculer-repl](moleculer-repl.html) | REPL module for Moleculer framework. | [![npm](https://img.shields.io/npm/v/moleculer-repl.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-repl)
| [moleculer-cli](moleculer-cli.html) | Command line tool for Moleculer framework. | [![npm](https://img.shields.io/npm/v/moleculer-cli.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-cli)


## Third-party modules

### General
| Module name | Author |Description | Version |
|-------------|--------|------------|---------|
| [moleculer-adapter-feathers](https://github.com/zygos/moleculer-adapter-feathers#readme) | [zygos](zygos) | Moleculer service mixin wrapping Feathers.js services. | [![NPM version](https://img.shields.io/npm/v/moleculer-adapter-feathers.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-adapter-feathers)
| [moleculer-decorators](https://github.com/ColonelBundy/moleculer-decorators#readme) | [ColonelBundy](https://github.com/ColonelBundy) | Decorators for Moleculer framework. | [![npm](https://img.shields.io/npm/v/moleculer-decorators.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-decorators)
| [moleculer-graphql](https://github.com/ConciergeAuctions/moleculer-graphql#readme) | [brad-decker](https://github.com/brad-decker) | GraphQL Schema stitching over a microservice network for co-located type definitions. | [![npm](https://img.shields.io/npm/v/moleculer-graphql.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-graphql)
| [moleculer-sc](https://github.com/tiaod/moleculer-sc#readme) | [tiaod](https://github.com/tiaod) | API Gateway service for Moleculer framework using SocketCluster. | [![npm](https://img.shields.io/npm/v/moleculer-sc.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-sc)
| [moleculer-json-schema-validator](https://github.com/zhaoyao91/moleculer-json-schema-validator#readme) | [zhaoyao91](https://github.com/zhaoyao91) | JSON Schema Validator with ajv. | [![npm](https://img.shields.io/npm/v/moleculer-json-schema-validator.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-json-schema-validator)
| [moleculer-flydrive](https://github.com/molobala/moleculer-flydrive#readme) | [molobala](https://github.com/molobala) | Fluent storage manager service with Node Flydrive. | [![npm](https://img.shields.io/npm/v/moleculer-flydrive.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-flydrive)
| [moleculer-elastic-apm](https://github.com/intech/moleculer-elastic-apm) | [Ivan Zhuravlev](https://github.com/intech) | Metrics to Elastic APM Agent. | [![npm](https://img.shields.io/npm/v/moleculer-elastic-apm.svg?maxAge=3600)](https://www.npmjs.com/package/moleculer-elastic-apm)
| [hapi-moleculer](https://github.com/felipegcampos/hapi-moleculer) | [felipegcampos](https://github.com/felipegcampos) | Hapi plugin for the Moleculer Microservices Framework. | [![npm](https://img.shields.io/npm/v/hapi-moleculer.svg?maxAge=3600)](https://www.npmjs.com/package/hapi-moleculer)
| [imicros-flow](https://github.com/al66/imicros-flow) | [al66](https://github.com/al66) | Moleculer service for loose coupled event handling. | [![npm](https://img.shields.io/npm/v/imicros-flow.svg?maxAge=3600)](https://www.npmjs.com/package/imicros-flow)

> Do you have a custom module for Moleculer? [Tell us!](https://github.com/moleculerjs/moleculer/issues)
